{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 51,
  "lineage": "fa079c6c-047e-350f-3d12-0969586c8c82",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Admin_MAchine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:055574845309:instance/i-09d0af7b6867574e1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d0af7b6867574e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yousra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a2e3c97ead2c78ee",
            "private_dns": "ip-10-0-1-127.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.127",
            "public_ip": "44.211.188.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03bc1ea4631e94e37",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059a088b7f72e2521",
            "tags": {
              "Name": "Admin_Machine"
            },
            "tags_all": {
              "Name": "Admin_Machine"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050a6d00f8d5c9f49"
            ]
          },
          "dependencies": [
            "aws_security_group.PROJETFINAL-SG-PUBLIC",
            "aws_security_group.PROJETFINAL-SG-WEB",
            "aws_subnet.PROJETFINAL-SUBNET-PUBLIC",
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PROJETFINAL-INSTANCE-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:055574845309:instance/i-089f8ec1efd5e9bc1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089f8ec1efd5e9bc1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yousra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f38fe462e2c6eed9",
            "private_dns": "ip-10-0-2-66.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f7a4536ce2182a21",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01539fb3dc634f2b4",
            "tags": {
              "Name": "PROJETFINAL-INSTANCE-AZ-A"
            },
            "tags_all": {
              "Name": "PROJETFINAL-INSTANCE-AZ-A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b037bdbfcaf62d33"
            ]
          },
          "dependencies": [
            "aws_instance.PROJETFINAL-INSTANCE-PUBLIC",
            "aws_security_group.PROJETFINAL-SG-PUBLIC",
            "aws_security_group.PROJETFINAL-SG-WEB",
            "aws_subnet.PROJETFINAL-SUBNET-AZ-A",
            "aws_subnet.PROJETFINAL-SUBNET-PUBLIC",
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PROJETFINAL-INSTANCE-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:055574845309:instance/i-0e9f7ca16460c343b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e9f7ca16460c343b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yousra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0552bfac60534f790",
            "private_dns": "ip-10-0-3-173.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.173",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0978e325f98d0bc1a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ff6a9b9ddc04e40",
            "tags": {
              "Name": "PROJETFINAL-INSTANCE-AZ-B"
            },
            "tags_all": {
              "Name": "PROJETFINAL-INSTANCE-AZ-B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b037bdbfcaf62d33"
            ]
          },
          "dependencies": [
            "aws_instance.PROJETFINAL-INSTANCE-PUBLIC",
            "aws_security_group.PROJETFINAL-SG-PUBLIC",
            "aws_security_group.PROJETFINAL-SG-WEB",
            "aws_subnet.PROJETFINAL-SUBNET-AZ-B",
            "aws_subnet.PROJETFINAL-SUBNET-PUBLIC",
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PROJETFINAL-INSTANCE-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:055574845309:instance/i-02a29eaa95969a174",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a29eaa95969a174",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yousra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a6417d2da0cd9072",
            "private_dns": "ip-10-0-4-35.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-069e91f91dcf58cbe",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e57aa41f9058d57",
            "tags": {
              "Name": "PROJETFINAL-INSTANCE-AZ-C"
            },
            "tags_all": {
              "Name": "PROJETFINAL-INSTANCE-AZ-C"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b037bdbfcaf62d33"
            ]
          },
          "dependencies": [
            "aws_instance.PROJETFINAL-INSTANCE-PUBLIC",
            "aws_security_group.PROJETFINAL-SG-PUBLIC",
            "aws_security_group.PROJETFINAL-SG-WEB",
            "aws_subnet.PROJETFINAL-SUBNET-AZ-C",
            "aws_subnet.PROJETFINAL-SUBNET-PUBLIC",
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PROJETFINAL-INSTANCE-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:055574845309:instance/i-0438774949b753be0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0438774949b753be0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yousra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0da07cae1eabe779a",
            "private_dns": "ip-10-0-1-174.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.174",
            "public_ip": "3.238.31.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ef873a9dc3465403",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059a088b7f72e2521",
            "tags": {
              "Name": "PROJETFINAL-INSTANCE-PUBLIC"
            },
            "tags_all": {
              "Name": "PROJETFINAL-INSTANCE-PUBLIC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050a6d00f8d5c9f49"
            ]
          },
          "dependencies": [
            "aws_security_group.PROJETFINAL-SG-PUBLIC",
            "aws_security_group.PROJETFINAL-SG-WEB",
            "aws_subnet.PROJETFINAL-SUBNET-PUBLIC",
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:055574845309:instance/i-076c2c0dedd9e9658",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-076c2c0dedd9e9658",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yousra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03078dd60a2dc926e",
            "private_dns": "ip-10-0-1-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.204",
            "public_ip": "3.239.169.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ee57178ff6457a79",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059a088b7f72e2521",
            "tags": {
              "Name": "Proxy"
            },
            "tags_all": {
              "Name": "Proxy"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050a6d00f8d5c9f49"
            ]
          },
          "dependencies": [
            "aws_instance.PROJETFINAL-INSTANCE-AZ-A",
            "aws_instance.PROJETFINAL-INSTANCE-AZ-B",
            "aws_instance.PROJETFINAL-INSTANCE-AZ-C",
            "aws_instance.PROJETFINAL-INSTANCE-PUBLIC",
            "aws_security_group.PROJETFINAL-SG-PUBLIC",
            "aws_security_group.PROJETFINAL-SG-WEB",
            "aws_subnet.PROJETFINAL-SUBNET-AZ-A",
            "aws_subnet.PROJETFINAL-SUBNET-AZ-B",
            "aws_subnet.PROJETFINAL-SUBNET-AZ-C",
            "aws_subnet.PROJETFINAL-SUBNET-PUBLIC",
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Reverse_Proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:055574845309:instance/i-0bfc6763a551f166c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bfc6763a551f166c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yousra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-007bcaa0f2e0b5aed",
            "private_dns": "ip-10-0-1-111.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.111",
            "public_ip": "3.236.157.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d3b92897562d1cca",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059a088b7f72e2521",
            "tags": {
              "Name": "Reverse_Proxy"
            },
            "tags_all": {
              "Name": "Reverse_Proxy"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050a6d00f8d5c9f49"
            ]
          },
          "dependencies": [
            "aws_security_group.PROJETFINAL-SG-PUBLIC",
            "aws_security_group.PROJETFINAL-SG-WEB",
            "aws_subnet.PROJETFINAL-SUBNET-PUBLIC",
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "PROJETFINAL-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:internet-gateway/igw-0aa4ec495f7724f61",
            "id": "igw-0aa4ec495f7724f61",
            "owner_id": "055574845309",
            "tags": {
              "Name": "PROJETFINAL-IGW"
            },
            "tags_all": {
              "Name": "PROJETFINAL-IGW"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PROJETFINAL-RTB-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:route-table/rtb-08ef85b183fa73bdd",
            "id": "rtb-08ef85b183fa73bdd",
            "owner_id": "055574845309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa4ec495f7724f61",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROJETFINAL-RTB-PUBLIC"
            },
            "tags_all": {
              "Name": "PROJETFINAL-RTB-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-089eea4cefd8751d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.PROJETFINAL-IGW",
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PROJETFINAL-RTB-PUBLIC-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ccb8110bd506471",
            "route_table_id": "rtb-08ef85b183fa73bdd",
            "subnet_id": "subnet-059a088b7f72e2521"
          },
          "dependencies": [
            "aws_internet_gateway.PROJETFINAL-IGW",
            "aws_route_table.PROJETFINAL-RTB-PUBLIC",
            "aws_subnet.PROJETFINAL-SUBNET-PUBLIC",
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PROJETFINAL-RTB-PUBLIC-ASSOC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0166f8ca051017808",
            "route_table_id": "rtb-08ef85b183fa73bdd",
            "subnet_id": "subnet-01539fb3dc634f2b4"
          },
          "dependencies": [
            "aws_internet_gateway.PROJETFINAL-IGW",
            "aws_route_table.PROJETFINAL-RTB-PUBLIC",
            "aws_subnet.PROJETFINAL-SUBNET-AZ-A",
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PROJETFINAL-RTB-PUBLIC-ASSOC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05df869e851ceff2e",
            "route_table_id": "rtb-08ef85b183fa73bdd",
            "subnet_id": "subnet-00ff6a9b9ddc04e40"
          },
          "dependencies": [
            "aws_internet_gateway.PROJETFINAL-IGW",
            "aws_route_table.PROJETFINAL-RTB-PUBLIC",
            "aws_subnet.PROJETFINAL-SUBNET-AZ-B",
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PROJETFINAL-RTB-PUBLIC-ASSOC3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079095be0c7072953",
            "route_table_id": "rtb-08ef85b183fa73bdd",
            "subnet_id": "subnet-00e57aa41f9058d57"
          },
          "dependencies": [
            "aws_internet_gateway.PROJETFINAL-IGW",
            "aws_route_table.PROJETFINAL-RTB-PUBLIC",
            "aws_subnet.PROJETFINAL-SUBNET-AZ-C",
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PROJETFINAL-SG-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:security-group/sg-050a6d00f8d5c9f49",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050a6d00f8d5c9f49",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3128,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b037bdbfcaf62d33"
                ],
                "self": false,
                "to_port": 3128
              }
            ],
            "name": "terraform-20230923190300746200000002",
            "name_prefix": "terraform-",
            "owner_id": "055574845309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PROJETFINAL-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "PROJETFINAL-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-089eea4cefd8751d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.PROJETFINAL-SG-WEB",
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PROJETFINAL-SG-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:security-group/sg-0b037bdbfcaf62d33",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b037bdbfcaf62d33",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230923190257213900000001",
            "name_prefix": "terraform-",
            "owner_id": "055574845309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PROJETFINAL-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "PROJETFINAL-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-089eea4cefd8751d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PROJETFINAL-SUBNET-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:subnet/subnet-01539fb3dc634f2b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01539fb3dc634f2b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055574845309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROJETFINAL-SUBNET-AZ-A"
            },
            "tags_all": {
              "Name": "PROJETFINAL-SUBNET-AZ-A"
            },
            "vpc_id": "vpc-089eea4cefd8751d1"
          },
          "dependencies": [
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PROJETFINAL-SUBNET-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:subnet/subnet-00ff6a9b9ddc04e40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ff6a9b9ddc04e40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055574845309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROJETFINAL-SUBNET-AZ-B"
            },
            "tags_all": {
              "Name": "PROJETFINAL-SUBNET-AZ-B"
            },
            "vpc_id": "vpc-089eea4cefd8751d1"
          },
          "dependencies": [
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PROJETFINAL-SUBNET-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:subnet/subnet-00e57aa41f9058d57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e57aa41f9058d57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055574845309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROJETFINAL-SUBNET-AZ-C"
            },
            "tags_all": {
              "Name": "PROJETFINAL-SUBNET-AZ-C"
            },
            "vpc_id": "vpc-089eea4cefd8751d1"
          },
          "dependencies": [
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PROJETFINAL-SUBNET-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:subnet/subnet-059a088b7f72e2521",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059a088b7f72e2521",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055574845309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROJETFINAL-SUBNET-PUBLIC"
            },
            "tags_all": {
              "Name": "PROJETFINAL-SUBNET-PUBLIC"
            },
            "vpc_id": "vpc-089eea4cefd8751d1"
          },
          "dependencies": [
            "aws_vpc.PROJETFINAL-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "PROJETFINAL-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:vpc/vpc-089eea4cefd8751d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d20576f3a1392ac0",
            "default_route_table_id": "rtb-08ff13f6b2c548112",
            "default_security_group_id": "sg-094120891b32d5913",
            "dhcp_options_id": "dopt-062c172c5a4285b27",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-089eea4cefd8751d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08ff13f6b2c548112",
            "owner_id": "055574845309",
            "tags": {
              "Name": "PROJETFINAL-VPC"
            },
            "tags_all": {
              "Name": "PROJETFINAL-VPC"
            }
          }
        }
      ]
    }
  ]
}